--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
   		<artifactId>commons-collections</artifactId>
   		<version>3.2.1</version>
   	</dependency>
+  	<dependency>
+    	<groupId>io.netty</groupId>
+	    <artifactId>netty-all</artifactId>
+	    <version>4.1.19.Final</version>
+	</dependency>
   </dependencies>
 </project>
